@startuml

title __FRI's Class Diagram__\n

  namespace sk.uniza.fri {
    class sk.uniza.fri.Hra {
        - vyhral : boolean
        + Hra()
        + posunHodenejSisky()
        + posunHraca()
        + posunMapy()
        + posunZvieratAPredmetov()
        + prehra()
        + rozlisenieKolizie()
        + setHodenaSiska()
        + setVyhral()
        + skore()
        + vyhra()
        + vykresli()
        + vypis()
        - koliziaSPredmetom()
        - koliziaSisky()
        - koliziaSoZverom()
        - stojiNaPlosine()
        - zabitieZveru()
    }
  }
  

  namespace sk.uniza.fri {
    class sk.uniza.fri.MojaHra {
        + create()
    }
  }
  

  namespace sk.uniza.fri {
    enum Smer {
      DOLE
      HORE
      NIKAM
      VLAVO
      VPRAVO
      posunX
      posunY
    }
  }
  

  namespace sk.uniza.fri {
    abstract class sk.uniza.fri.ZakladnaTrieda {
        - sirka : int
        - texture : Texture
        - vyska : int
        - x : int
        - y : int
        + ZakladnaTrieda()
        + getSirka()
        + getTexture()
        + getVyska()
        + getX()
        + getY()
        + setSirka()
        + setTexture()
        + setVyska()
        + setX()
        + setY()
        + vykresli()
    }
  }
  

  sk.uniza.fri.Hra o-- sk.uniza.fri.predmety.Siska : hodenaSiska
  sk.uniza.fri.Hra o-- sk.uniza.fri.postavy.Hrac : hrac
  sk.uniza.fri.Hra o-- sk.uniza.fri.mapa.MapaZoSuboru : mapa
  sk.uniza.fri.Hra o-- sk.uniza.fri.Smer : smer
  sk.uniza.fri.MojaHra -up-|> com.badlogic.gdx.Game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
